@@ -3,7 +3,7 @@ cmake_minimum_required(VERSION 2.6)
 project (KFRITZ)
 
 #set(CMAKE_VERBOSE_MAKEFILE true) # <-- enable for debugging
-set(CMAKE_BUILD_TYPE "Debug")    # <-- enable for debugging 
+#set(CMAKE_BUILD_TYPE "Debug")    # <-- enable for debugging 
 set(CMAKE_SKIP_RPATH TRUE)
 set(CMAKE_MODULE_PATH "${KFRITZ_SOURCE_DIR}/CMakeModules")
 
@@ -75,8 +75,8 @@ kde4_add_ui_files(kfritzbox_SRCS KSettingsFritzBox.ui KSettingsFonbooks.ui)
 
 configure_file(pkg-config.h.cmake ${CMAKE_CURRENT_BINARY_DIR}/pkg-config.h)
 kde4_add_executable(kfritz ${kfritzbox_SRCS})
-target_link_libraries(kfritz ${KDE4_KDEUI_LIBS} ${KDE4_KNOTIFYCONFIG_LIBRARY} ${GCRYPT_LIBRARIES}
-                                fritz++ tcpclient++ pthread++ )
+target_link_libraries(kfritz ${KDE4_KDEUI_LIBS} ${KDE4_KNOTIFYCONFIG_LIBRARY} 
+                                fritz++ tcpclient++ pthread++ ${GCRYPT_LIBRARIES})
 if (INDICATEQT_FOUND)
 	target_link_libraries(kfritz ${INDICATEQT_LIBRARIES})
 endif (INDICATEQT_FOUND)
